<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="msg_success_add_memo">Successfully added</string>
    <string name="msg_data_not_valid">Please fill all Fields</string>
    <string name="btn_save">Save</string>
    <string name="btn_clear">Clear</string>
    <string name="field_title">Enter Title</string>
    <string name="field_content">Enter Content</string>
    <string name="lbl_home">Memo List</string>
    <string name="lbl_edit_memo">Edit Memo</string>
    <string name="lbl_add_memo">New Memo</string>
    <string name="app_name">Memo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_memo">AddMemo</string>
    <string name="title_activity_edit_memo">EditMemo</string>

</resources>
