<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context="ir.saeedtorabi.memo.EditMemo">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:paddingLeft="20dp"
        android:background="@color/ORANGE"
        android:padding="20dp"
        android:id="@+id/relativeLayout3">
        <TextView
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/lbl_edit_memo" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="0dp"
        android:id="@+id/relativeLayout"
        android:layout_below="@+id/relativeLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp">
        <TextView
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/field_title"
            android:id="@+id/textView2" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/titleMemo"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="0dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/field_content"
            android:id="@+id/textView" />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:lines="5"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:id="@+id/contentMemo"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/warper_new_memo"
        android:background="@drawable/border_top"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout2"
        android:padding="8dp"
        android:layout_marginTop="24dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@color/ORANGE"
            android:text="@string/btn_save"
            android:textColor="@color/abc_primary_text_disable_only_material_dark"
            android:id="@+id/btn_save"
            android:onClick="AddNewMemo"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="false" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/btn_clear"
            android:layout_marginLeft="8dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/btn_save"
            android:background="@android:color/transparent"
            android:textColor="@color/ORANGE"
            android:onClick="ResetFormAddMemo"
            android:layout_marginRight="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:id="@+id/button" />
    </RelativeLayout>

</RelativeLayout>
